# westwork

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  docker-compose.yml  docker-compose.yml.mustache
client_connection/: client_connection.rs
ldap/: Dockerfile  entrypoint.sh  start.sh
ldap/conf/: cn=config.ldif  config.ldif  slapd.conf
ldap/conf/cn=config/: cn=module{0}.ldif  cn=schema.ldif  olcBackend={0}mdb.ldif  olcDatabase={-1}frontend.ldif  olcDatabase={0}config.ldif  olcDatabase={1}mdb.ldif
ldap/conf/cn=config/cn=schema/: cn={0}core.ldif  cn={1}cosine.ldif  cn={2}nis.ldif  cn={3}inetorgperson.ldif
ldap/schema/: postfix.ldif
nginx/: Dockerfile
nginx/conf/: nginx.conf
nginx/conf/sites-available/: eros.local
nginx/conf/sites-enabled/: eros.local
protobufs/: bootstrap.proto
src/: bootstrap.rs  bootstrap_grpc.rs  main.rs
src/bootstrap/: mod.rs
src/config/: form_structs.rs  logic.rs  mod.rs
static/: westwork_style.css
templates/: bootstrap.html.hbs  index.html.hbs
